final project complete

--- a/MushroomsMachineLearning.ipynb
+++ b/MushroomsMachineLearning.ipynb
@@ -29,8 +29,7 @@
     "from sklearn.metrics import confusion_matrix,classification_report,matthews_corrcoef, roc_auc_score, confusion_matrix, accuracy_score, roc_curve, auc,f1_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "import seaborn as sb\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "import seaborn as sb"
    ]
   },
   {
@@ -3147,7 +3146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Applying Models (K-Nearest Neighbour, Logistic Regression, Random Forest Classifier)"
+    "## 8. Applying Models (K-Nearest Neighbour and Random Forest Classifier)"
    ]
   },
   {
@@ -3184,9 +3183,6 @@
     "    n_neighbors = nilai_k()\n",
     ")\n",
     "modelknn.fit(xtr,ytr)\n",
-    "\n",
-    "logmodel = LogisticRegression(solver='lbfgs',max_iter=1000)\n",
-    "logmodel.fit(xtr,ytr)\n",
     "\n",
     "modelrfc = RandomForestClassifier(n_estimators=100)\n",
     "modelrfc.fit(xtr,ytr)"
